sdl-parser/src/snapshots/sdl_parser__conditions__tests__command_condition_is_parsed.snap
---
source: sdl-parser/src/conditions.rs
expression: condition
---
Condition {
    vm_name: "windows-10",
    command: Some(
        "executable/path.sh",
    ),
    interval: Some(
        30,
    ),
    _source_helper: None,
    source: None,
}
