sdl-parser/src/snapshots/sdl_parser__conditions__tests__library_condition_is_parsed.snap
---
source: sdl-parser/src/conditions.rs
expression: condition
---
Condition {
    vm_name: "green-evaluation-machine",
    command: None,
    interval: None,
    source_helper: Some(
        ShortSource(
            "digital-library-package",
        ),
    ),
    source: None,
}
