sdl-parser/src/snapshots/sdl_parser__conditions__tests__source_fields_are_mapped_correctly.snap
---
source: sdl-parser/src/conditions.rs
expression: schema
---
scenario:
  name: test-scenario
  description: some-description
  start: "2022-01-20T13:00:00Z"
  end: "2022-01-20T23:00:00Z"
  nodes: ~
  infrastructure: ~
  conditions:
    condition-1:
      command: executable/path.sh
      interval: 30
      source: ~
    condition-2:
      command: ~
      interval: ~
      source:
        name: digital-library-package
        version: "*"

